[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Status Effects/StatusEffectTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/IceSE.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Status Effects/Ice.tscn" type="PackedScene" id=3]

[node name="IceSE" instance=ExtResource( 1 )]
script = ExtResource( 2 )
rate = {
"Extreme": 0.1,
"Mild": 0.1,
"Strong": 0.1,
"Weak": 0.1
}
normal_color = Color( 1, 1, 1, 1 )
effect_color = Color( 0.537255, 0.788235, 0.847059, 1 )
slow_duration = {
"Extreme": 10,
"Mild": 3,
"Strong": 6,
"Weak": 3
}
ice_tscn = ExtResource( 3 )

[node name="EffectTimer" parent="." index="0"]
wait_time = 0.1
one_shot = true

[node name="Tween" type="Tween" parent="." index="3"]

[node name="SlowDurationTimer" type="Timer" parent="." index="4"]
one_shot = true

[connection signal="timeout" from="EffectTimer" to="." method="create_weapon_ice"]
[connection signal="timeout" from="EffectTimer" to="." method="slow_ship"]
[connection signal="timeout" from="SlowDurationTimer" to="." method="change_color" binds= [ "ToNormal" ]]
